fix stretch on ie11

--- a/src/layout.css
+++ b/src/layout.css
@@ -18,16 +18,9 @@
 }
 
 /* workaround for IE10-11 flex min-height bug */
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  width: 100%;
-}
-
 .parent {
   flex-grow: 1;
-  min-height: 100%;
+  height: 100%;
 }
 
 .overflow {
@@ -41,6 +34,7 @@
 }
 
 .auto {
+  flex-shrink: 0;
   flex-grow: 1;
 }
 
